--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "phpro/api-problem-bundle",
+    "name": "1mcodes/api-problem-bundle",
     "description": "RFC7807 Problem details integration for Symfony",
     "type": "symfony-bundle",
     "license": "MIT",
     "authors": [
         {
-            "name": "Toon Verwerft",
-            "email": "toon.verwerft@phpro.be"
+            "name": "Michał Łukasik",
+            "email": "contact@one-man.codes"
         }
     ],
     "require": {
