--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Michał Łukasik",
-            "email": "contact@one-man.codes"
+            "name": "Toon Verwerft",
+            "email": "toon.verwerft@phpro.be"
         }
     ],
     "require": {
